Se corrige pantalla de caja de arena, muchas mejoras, se planea reacomodar componentes

--- a/src/app/common/components/view-file/view-file.component.html
+++ b/src/app/common/components/view-file/view-file.component.html
@@ -9,9 +9,9 @@
       </div>
       <div class="modal-body">
         <div class="card-image">
-          <img [src]="blobData | safeUrl" *ngIf="file.contentType === 'image/png'" alt="image"/>
+          <img [src]="blobData | safeUrl" *ngIf="file.contentType === 'image/png' && blobData" alt="image"/>
           <ngx-extended-pdf-viewer [src]="blobData"
-                                   *ngIf="file.contentType === 'application/pdf'">
+                                   *ngIf="file.contentType === 'application/pdf' && blobData">
           </ngx-extended-pdf-viewer>
         </div>
       </div>
