--- a/src/app/route/admin/field/field.component.html
+++ b/src/app/route/admin/field/field.component.html
@@ -7,17 +7,21 @@
 
           <div class="form-group">
             <ct-textfield [placeHolder]="PREFIX+'.searchPlaceHolder'" #search
-                          (keyup)="searchByWord(search.control.value)"></ct-textfield>
+                          (keyup)="searchByWord(search.value)"></ct-textfield>
           </div>
 
-          <div class="row form-group">
+          <div class="row">
             <div class="col-md-12">
-
               <div class="float-right">
                 <button type="button" class="btn btn-primary" (click)="addField()">
                   {{'Core.btnAdd' | translate}}
                 </button>
               </div>
+            </div>
+          </div>
+
+          <div class="row form-group">
+            <div class="col-md-12">
 
               <div class="mat-elevation-z8">
                 <table mat-table [dataSource]="dataSource">
