--- a/src/app/route/admin/sand-box/sand-box-criterion-card/sand-box-criterion-card.component.html
+++ b/src/app/route/admin/sand-box/sand-box-criterion-card/sand-box-criterion-card.component.html
@@ -16,7 +16,7 @@
 
         <div class="row" *ngFor="let field of fields" cdkDrag>
           <div class="col-12">
-            <fa-icon [icon]="faGripHorizontal" cdkDragHandle></fa-icon>
+            <fa-icon class='dragAndDrop' [icon]="faGripHorizontal" cdkDragHandle></fa-icon>
           </div>
           <div class="col-md-12 col-sm-12">
             <ng-container
