--- a/src/app/route/home/institute/institute-test/institute-criterion-card/institute-criterion-card.component.html
+++ b/src/app/route/home/institute/institute-test/institute-criterion-card/institute-criterion-card.component.html
@@ -8,7 +8,7 @@
   <div class="card-body">
     <form class="k-form form-group" [formGroup]="formGroup" [attr.id]="formId">
 
-      <div class="row" *ngFor="let field of fields" cdkDrag>
+      <div class="row" *ngFor="let field of fields">
         <div class="col-md-12 col-sm-12">
           <ng-container
             appDynamicField
