--- a/src/app/route/admin/criterion/criterion-field-modal/criterion-field-modal.component.html
+++ b/src/app/route/admin/criterion/criterion-field-modal/criterion-field-modal.component.html
@@ -10,8 +10,8 @@
       <div class="modal-body">
 
         <div class="form-group">
-          <ct-textfield [placeHolder]="'Components.Structure.Field.searchPlaceHolder'" #search
-                        (keyup)="searchByWord(search.control.value)"></ct-textfield>
+          <ct-textfield [placeHolder]="PREFIX + '.searchPlaceHolder'" #search
+                        (keyup)="searchByWord(search.value)"></ct-textfield>
         </div>
 
         <div class="mat-elevation-z8">
@@ -79,7 +79,7 @@
             <!-- Row shown when there is no matching data. -->
             <tr class="mat-row" *matNoDataRow>
               <td class="mat-cell" colspan="4">
-                {{'Components.Table.noData' | translate}}"{{search.control.value}}"
+                {{'Components.Table.noData' | translate}}"{{search.value}}"
               </td>
             </tr>
           </table>
