--- a/src/app/route/admin/sand-box/sand-box-criterion/sand-box-criterion.component.html
+++ b/src/app/route/admin/sand-box/sand-box-criterion/sand-box-criterion.component.html
@@ -12,39 +12,57 @@
                         (keyup)="searchByName(search.value)"></ct-textfield>
         </div>
 
-        <div class="table-responsive">
-          <table class="table table-striped">
-            <thead>
-            <tr class="d-flex">
-              <th class="col-1"></th>
-              <th class="col-4">
+        <div class="mat-elevation-z8">
+          <table mat-table [dataSource]="dataSource">
+
+            <!-- Checkbox Column -->
+            <ng-container matColumnDef="select">
+              <th mat-header-cell *matHeaderCellDef>
+                <mat-checkbox (change)="$event ? masterToggle() : null"
+                              [checked]="selection.hasValue() && isAllSelected()"
+                              [indeterminate]="selection.hasValue() && !isAllSelected()"
+                              [aria-label]="checkboxLabel()">
+                </mat-checkbox>
+              </th>
+              <td mat-cell *matCellDef="let row">
+                <mat-checkbox (click)="$event.stopPropagation()"
+                              (change)="$event ? selection.toggle(row) : null"
+                              [checked]="selection.isSelected(row)"
+                              [aria-label]="checkboxLabel(row)">
+                </mat-checkbox>
+              </td>
+            </ng-container>
+
+            <ng-container matColumnDef="name">
+              <th mat-header-cell *matHeaderCellDef>
                 {{PREFIX + '.name' | translate}}
               </th>
-              <th class="col-7">
-                {{PREFIX + '.count' | translate}}
-              </th>
+              <td mat-cell *matCellDef="let element">
+                {{element.name}}
+              </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"
+                (click)="selection.toggle(row)">
             </tr>
-            </thead>
-            <tbody>
-            <tr class="d-flex" *ngFor="let criterion of criterionList; let i = index">
-              <td class="col-1">
-                <button type="button" class="btn btn-outline-primary btn-sm" (click)="add(criterion)">
-                  <fa-icon [icon]="faPlus"></fa-icon>
-                </button>
-              </td>
-              <td class="col-4">
-                {{criterion.name}}
-              </td>
-              <td class="col-7">
-                {{criterion.fields.length}}
+
+            <!-- Row shown when there is no matching data. -->
+            <tr class="mat-row" *matNoDataRow>
+              <td class="mat-cell" colspan="4">
+                {{'Components.Table.noData' | translate}}"{{search.value}}"
               </td>
             </tr>
-            </tbody>
           </table>
+          <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
         </div>
+
         <div class="modal-footer">
           <ct-button [type]="buttonType.DANGER" (click)="close()">
             {{'Core.btnCancel' | translate}}
+          </ct-button>
+          <ct-button [type]="buttonType.PRIMARY" (click)="save()">
+            {{'Core.btnSave' | translate}}
           </ct-button>
         </div>
       </div>
