--- a/src/assets/styles/common.scss
+++ b/src/assets/styles/common.scss
@@ -2,3 +2,5 @@ $input-base-color: #8a8a8a;
 $input-focus-color: #1b73ce;
 $input-success-color: #28a745;
 $input-danger-color: #dc3545;
+
+$background-card-blue: #3f7ef2;
