--- a/src/app/route/home-institute/institute-test/institute-test-footer/institute-test-footer.component.html
+++ b/src/app/route/home-institute/institute-test/institute-test-footer/institute-test-footer.component.html
@@ -13,6 +13,14 @@
             </div>
           </div>
 
+          <div class="col-md-3">
+            <div>
+              {{instituteInfoRes.totalScore}} / {{fieldsInfoRes.totalScore}}
+            </div>
+            <div>
+              {{PREFIX + '.totalScored' | translate}}
+            </div>
+          </div>
         </div>
 
       </div>
