--- a/src/app/route/home/institute/institute-modal/institute-modal.component.html
+++ b/src/app/route/home/institute/institute-modal/institute-modal.component.html
@@ -20,6 +20,7 @@
             </div>
           </div>
         </form>
+        <app-institute-address-modal></app-institute-address-modal>
       </div>
       <div class="modal-footer">
         <ct-button [type]="ButtonType.DANGER" (click)="close()">
