--- a/src/app/structure/base/base.component.html
+++ b/src/app/structure/base/base.component.html
@@ -32,7 +32,7 @@
     <ct-navbar-item [label]="'Menu.Institute.test'"
                     [appAuthorized]="'adminUsers'"
                     [icon]="faSchool"
-                    [routerLink]="['/comapas/home/institute/test', company.idCompany]"></ct-navbar-item>
+                    [routerLink]="['/comapas/institute/test', company.idCompany]"></ct-navbar-item>
   </ct-navbar-dropdown>
   <ct-navbar-body>
     <router-outlet></router-outlet>
