--- a/src/app/route/admin/criterion/criterion-field-modal/criterion-field-modal.component.html
+++ b/src/app/route/admin/criterion/criterion-field-modal/criterion-field-modal.component.html
@@ -37,7 +37,7 @@
 
             <ng-container matColumnDef="label">
               <th mat-header-cell *matHeaderCellDef>
-                {{PREFIX + '.label' | translate}}
+                {{getDrawerProperty('P_M_FIELD') + '.label' | translate}}
               </th>
               <td mat-cell *matCellDef="let element">
                 {{element.label}}
@@ -46,7 +46,7 @@
 
             <ng-container matColumnDef="name">
               <th mat-header-cell *matHeaderCellDef>
-                {{PREFIX + '.name' | translate}}
+                {{getDrawerProperty('P_M_FIELD') + '.name' | translate}}
               </th>
               <td mat-cell *matCellDef="let element">
                 {{element.name}}
@@ -55,7 +55,7 @@
 
             <ng-container matColumnDef="score">
               <th mat-header-cell *matHeaderCellDef>
-                {{PREFIX + '.score' | translate}}
+                {{getDrawerProperty('P_M_FIELD') + '.score' | translate}}
               </th>
               <td mat-cell *matCellDef="let element">
                 {{element.score}}
@@ -64,7 +64,7 @@
 
             <ng-container matColumnDef="evidence">
               <th mat-header-cell *matHeaderCellDef>
-                {{PREFIX + '.evidence' | translate}}
+                {{getDrawerProperty('P_M_FIELD') + '.evidence' | translate}}
               </th>
               <td mat-cell *matCellDef="let element">
                 {{element.evidence}}
