--- a/src/app/route/admin/field/field.component.html
+++ b/src/app/route/admin/field/field.component.html
@@ -28,7 +28,7 @@
 
                   <ng-container matColumnDef="idField">
                     <th mat-header-cell *matHeaderCellDef>
-                      {{PREFIX + '.idField' | translate}}
+                      {{getDrawerProperty('P_M_FIELD') + '.idField' | translate}}
                     </th>
                     <td mat-cell *matCellDef="let element">
                       {{element.idField}}
@@ -37,7 +37,7 @@
 
                   <ng-container matColumnDef="label">
                     <th mat-header-cell *matHeaderCellDef>
-                      {{PREFIX + '.label' | translate}}
+                      {{getDrawerProperty('P_M_FIELD') + '.label' | translate}}
                     </th>
                     <td mat-cell *matCellDef="let element">
                       {{element.label}}
@@ -46,7 +46,7 @@
 
                   <ng-container matColumnDef="score">
                     <th mat-header-cell *matHeaderCellDef>
-                      {{PREFIX + '.score' | translate}}
+                      {{getDrawerProperty('P_M_FIELD') + '.score' | translate}}
                     </th>
                     <td mat-cell *matCellDef="let element">
                       {{element.score}}
@@ -55,7 +55,7 @@
 
                   <ng-container matColumnDef="type">
                     <th mat-header-cell *matHeaderCellDef>
-                      {{PREFIX + '.type' | translate}}
+                      {{getDrawerProperty('P_M_FIELD') + '.type' | translate}}
                     </th>
                     <td mat-cell *matCellDef="let element">
                       {{element.type}}
@@ -64,7 +64,7 @@
 
                   <ng-container matColumnDef="catalog">
                     <th mat-header-cell *matHeaderCellDef>
-                      {{PREFIX + '.catalog' | translate}}
+                      {{getDrawerProperty('P_M_FIELD') + '.catalog' | translate}}
                     </th>
                     <td mat-cell *matCellDef="let element">
                       {{element.catalog}}
@@ -73,7 +73,7 @@
 
                   <ng-container matColumnDef="evidence">
                     <th mat-header-cell *matHeaderCellDef>
-                      {{PREFIX + '.evidence' | translate}}
+                      {{getDrawerProperty('P_M_FIELD') + '.evidence' | translate}}
                     </th>
                     <td mat-cell *matCellDef="let element" class="text-success">
                       <fa-icon *ngIf="element.evidence" [icon]="faCheck"></fa-icon>
@@ -82,7 +82,7 @@
 
                   <ng-container matColumnDef="required">
                     <th mat-header-cell *matHeaderCellDef>
-                      {{PREFIX + '.required' | translate}}
+                      {{getDrawerProperty('P_M_FIELD') + '.required' | translate}}
                     </th>
                     <td mat-cell *matCellDef="let element" class="text-success">
                       <fa-icon *ngIf="element.required" [icon]="faCheck"></fa-icon>
