--- a/src/app/route/admin/sand-box/sand-box-criterion/sand-box-criterion.component.html
+++ b/src/app/route/admin/sand-box/sand-box-criterion/sand-box-criterion.component.html
@@ -35,7 +35,7 @@
 
             <ng-container matColumnDef="name">
               <th mat-header-cell *matHeaderCellDef>
-                {{PREFIX + '.name' | translate}}
+                {{getDrawerProperty('P_M_CRITERION') + '.name' | translate}}
               </th>
               <td mat-cell *matCellDef="let element">
                 {{element.name}}
