--- a/src/app/route/home/institute/institute-table/institute-table.component.html
+++ b/src/app/route/home/institute/institute-table/institute-table.component.html
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card mt-2">
   <div class="card-body">
     <h1>{{PREFIX + '.title' | translate}}</h1>
 
@@ -19,11 +19,11 @@
     <div class="row form-group">
       <div class="col-md-12">
         <div class="mat-elevation-z8">
-          <table mat-table [dataSource]="dataSource">
+          <table mat-table [dataSource]="dataSource" multiTemplateDataRows>
 
             <ng-container matColumnDef="idCompany">
               <th mat-header-cell *matHeaderCellDef>
-                {{PREFIX + '.idCompany' | translate}}
+                {{getDrawerProperty('P_M_COMPANY') + '.idCompany' | translate}}
               </th>
               <td mat-cell *matCellDef="let element">
                 {{element.idCompany}}
@@ -32,7 +32,7 @@
 
             <ng-container matColumnDef="name">
               <th mat-header-cell *matHeaderCellDef>
-                {{PREFIX + '.name' | translate}}
+                {{getDrawerProperty('P_M_COMPANY') + '.name' | translate}}
               </th>
               <td mat-cell *matCellDef="let element">
                 {{element.name}}
@@ -63,14 +63,34 @@
               <th mat-header-cell *matHeaderCellDef>
               </th>
               <td mat-cell *matCellDef="let element">
-                <button type="button" class="btn btn-primary">
+                <button type="button" class="btn btn-primary" (click)="edit(element); $event.stopPropagation()">
                   <fa-icon [icon]="faPencilAlt"></fa-icon>
                 </button>
               </td>
             </ng-container>
 
+            <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
+            <ng-container matColumnDef="expandedDetail">
+              <td mat-cell *matCellDef="let element" [attr.colspan]="displayedColumns.length">
+                <div class="example-element-detail"
+                     [@detailExpand]="element === expandedElement ? 'expanded' : 'collapsed'">
+                  <div class="row col-12">
+                    <div class="card w-100 mb-2" *ngIf="element.show">
+                      <app-institute-detail [companyRes]="element"
+                                            [fieldsInfoRes]="fieldsInfoRes"></app-institute-detail>
+                    </div>
+                  </div>
+                </div>
+              </td>
+            </ng-container>
+
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            <tr mat-row *matRowDef="let element; columns: displayedColumns;"
+                class="example-element-row"
+                [class.example-expanded-row]="expandedElement === element"
+                (click)="expand(element)">
+            </tr>
+            <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
 
             <!-- Row shown when there is no matching data. -->
             <tr class="mat-row" *matNoDataRow>
@@ -81,6 +101,7 @@
           </table>
           <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
         </div>
+
       </div>
     </div>
   </div>
