--- a/src/app/route/admin/sand-box/sand-box.component.html
+++ b/src/app/route/admin/sand-box/sand-box.component.html
@@ -23,10 +23,11 @@
               </div>
             </div>
           </div>
-
-          <button type="button" class="btn btn-outline-primary btn-lg btn-block" (click)="addCategory()">
-            {{'Core.btnAdd' | translate}}
-          </button>
+          <div class="d-grid gap-2">
+            <button type="button" class="btn btn-outline-primary btn-lg btn-block" (click)="addCategory()">
+              {{'Core.btnAdd' | translate}}
+            </button>
+          </div>
         </div>
 
       </div>
