--- a/src/assets/styles/inputs.scss
+++ b/src/assets/styles/inputs.scss
@@ -3,3 +3,11 @@
 .row-upload {
   margin-top: -14px;
 }
+
+.mat-form-field-flex {
+  background-color: transparent;
+}
+
+.mat-form-field-label-wrapper {
+  font: 400 18px/20px Roboto, "Helvetica Neue", sans-serif;
+}
