--- a/src/app/route/admin/criterion/criterion.component.html
+++ b/src/app/route/admin/criterion/criterion.component.html
@@ -11,7 +11,7 @@
             </div>
 
             <div class="col-12">
-              <div class="float-right">
+              <div class="float-end">
                 <button type="button" class="btn btn-primary" (click)="addCriterion()">
                   {{'Core.btnAdd' | translate}}
                 </button>
@@ -41,7 +41,7 @@
                 </ul>
 
                 <div class="card-body">
-                  <button type="button" class="btn btn-secondary mr-2" (click)="edit(criterion)">
+                  <button type="button" class="btn btn-secondary me-2" (click)="edit(criterion)">
                     {{'Core.btnEdit' | translate}}
                   </button>
                   <button type="button" class="btn btn-primary" (click)="addFields(criterion)">
