--- a/src/app/route/admin/field/field.component.html
+++ b/src/app/route/admin/field/field.component.html
@@ -12,7 +12,7 @@
 
           <div class="row">
             <div class="col-md-12">
-              <div class="float-right">
+              <div class="float-end">
                 <button type="button" class="btn btn-primary" (click)="addField()">
                   {{'Core.btnAdd' | translate}}
                 </button>
