--- a/src/app/route/admin/sand-box/sand-box-criterion-card/sand-box-criterion-card.component.html
+++ b/src/app/route/admin/sand-box/sand-box-criterion-card/sand-box-criterion-card.component.html
@@ -1,6 +1,6 @@
 <div class="card criterion-card mb-2">
   <div class="card-header">
-    <div class="float-right">
+    <div class="float-end">
       <button type="button" class="btn btn-outline-danger" (click)="remove()">
         <fa-icon [icon]="faTrash"></fa-icon>
       </button>
