--- a/src/app/route/home-institute/institute-test/institute-criterion-card/institute-criterion-card.component.html
+++ b/src/app/route/home-institute/institute-test/institute-criterion-card/institute-criterion-card.component.html
@@ -5,7 +5,7 @@
     </h1>
   </div>
 
-  <div class="card-body">
+  <div class="card-body" [attr.id]="criterion.idCriterion">
     <form class="k-form form-group" [formGroup]="formGroup" [attr.id]="formId">
 
       <div class="row" *ngFor="let field of fields">
