--- a/src/app/route/home-institute/institute-test/institute-test.component.html
+++ b/src/app/route/home-institute/institute-test/institute-test.component.html
@@ -1,7 +1,19 @@
-<div class="container-lg container-fluid">
+<div class="container-lg container-fluid scrollspy">
 
   <div class="row">
-    <div class="col-12">
+
+    <div class="col-md-2 col-sm-12">
+      <nav class="nav nav-pills flex-column nav-scroll-spy">
+        <div class="nav-link active" *ngFor="let category of categories; let i = index"
+           (click)="scrollTo(category.idCategory)"
+           [ngClass]="{ 'active': currentSection === 'cat' + category.idCategory}"
+           [attr.href]="'#cat'+category.idCategory">
+          {{category.name}}
+        </div>
+      </nav>
+    </div>
+
+    <div class="col-md-10 col-sm-12">
       <div class="card">
         <div class="card-body">
           <div class="row">
@@ -10,18 +22,20 @@
             </div>
           </div>
 
-          <div class="row" *ngFor="let category of categories; let i = index">
-            <div class="col">
-              <app-institute-category-card [category]="category"
-                                           [institute]="institute"></app-institute-category-card>
+          <div class="yes" scrollSpy [className]="'cat-scroll'" (sectionChange)="onSectionChange($event)">
+            <div class="row" *ngFor="let category of categories; let i = index">
+              <div class="col">
+                <app-institute-category-card [category]="category"
+                                             [institute]="institute"></app-institute-category-card>
+              </div>
             </div>
           </div>
 
           <div class="row mb-2">
             <div class="col-md-12">
 
-              <div class="float-right">
-                <button type="button" class="btn btn-secondary mr-2" (click)="save()">
+              <div class="float-end">
+                <button type="button" class="btn btn-secondary me-2" (click)="save()">
                   {{'Core.btnSave' | translate}}
                 </button>
                 <button type="button" class="btn btn-primary" (click)="complete()">
@@ -31,13 +45,15 @@
             </div>
 
           </div>
+
+          <app-institute-test-footer></app-institute-test-footer>
         </div>
       </div>
     </div>
 
   </div>
 
-  <app-institute-test-footer></app-institute-test-footer>
+
 </div>
 
 <app-view-file></app-view-file>
