--- a/src/app/route/home/institute/institute-chart/institute-chart-card/institute-chart-card.component.html
+++ b/src/app/route/home/institute/institute-chart/institute-chart-card/institute-chart-card.component.html
@@ -11,8 +11,20 @@
           {{company.name}}
         </div>
       </div>
-      <div class="col-md-10 col-sm-12 progress">
-        <mat-progress-bar mode="determinate" [value]="getProgress()"></mat-progress-bar>
+      <div class="col-md-10 col-sm-12 box-progress">
+        <div class="progress">
+          <div class="progress-bar progress-bar-striped" role="progressbar"
+               [ngClass]="{
+               'bg-danger': progress <= 25,
+               'bg-warning': progress > 25 && progress <= 75,
+               'bg-success': progress > 75
+               }"
+               [style.width]="progress + '%'"
+               aria-valuenow="25"
+               aria-valuemin="0" aria-valuemax="100">
+            {{progress}}%
+          </div>
+        </div>
       </div>
     </div>
   </div>
