--- a/src/app/route/home/institute/institute-table/institute-table.component.html
+++ b/src/app/route/home/institute/institute-table/institute-table.component.html
@@ -9,7 +9,7 @@
 
     <div class="row">
       <div class="col-md-12">
-        <div class="float-right">
+        <div class="float-end">
           <button type="button" class="btn btn-primary" (click)="addCompany()">
             {{'Core.btnAdd' | translate}}
           </button>
